tests/fixtures/valid/operator_parentheses.torel
unit fixtures.operator_parentheses;

export proc main() -> Int32 {
    (1 + 2) * 3
}
