tests/fixtures/invalid/unknown_proc_call.torel
unit fixtures.unknown_proc_call;

export proc main() -> Exit {
    return nope();
}
